# blog-demos

./: .travis.yml  LICENSE  README.md
screen-aligned-triangle/: CMakeLists.txt  README.md
screen-aligned-triangle/data/: benchmark-minimal.frag  record-empty.vert  record.frag  record.geom  record.vert  replay.frag  replay.vert
screen-aligned-triangle/source/: cgutils.cpp  cgutils.h  main.cpp  screenalignedtriangle.cpp  screenalignedtriangle.h
